# rag-insurance-chatbot

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  demo.py  docker-compose.yml  frontend-optimization-summary.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_demo.py  test_system.py
data/indices/: .gitkeep
data/processed/: .gitkeep
data/raw/: .gitkeep
data/test/: .gitkeep
docs/: architecture.md  prd.md  國泰RAG系統架構分析報告.md
docs/architecture/: coding-standards.md  source-tree.md  tech-stack.md
docs/guides/: development-guide.md  quick-start.md
docs/prd/: appendices.md  core-features-requirements.md  document-history.md  document-information.md  executive-summary.md  index.md  product-goals-success-metrics.md  risk-assessment.md  success-criteria-validation.md  target-users-use-cases.md  technical-requirements.md  timeline-milestones.md
docs/qa/gates/: 1.1-project-setup.yml  1.2-document-processing-system.yml
docs/stories/: 1.1.project-setup.md  1.2.document-processing-system.md  1.3.rag-system-integration.md
scripts/: check_code_quality.py  validate_dependencies.py
src/: __init__.py  config.py  exceptions.py  logging_config.py  main.py  models.py  security.py  utils.py
src/api/: __init__.py  app.py  models.py  routes.py
src/evaluation/: __init__.py
src/generation/: __init__.py  llm_client.py  rag_system.py  response_generator.py
src/processing/: __init__.py  chunking_strategy.py  document_processor.py  text_cleaner.py
src/retrieval/: __init__.py  embedding_service.py  retrieval_service.py  vector_store.py
tests/: __init__.py  conftest.py
tests/integration/: test_docker.py  test_processing_pipeline.py
tests/unit/: test_chunking_strategy.py  test_config.py  test_dependencies.py  test_document_processor.py  test_exceptions.py  test_security_validation.py  test_text_cleaner.py
